--- a/sass/site/primary/_gutenberg.scss
+++ b/sass/site/primary/_gutenberg.scss
@@ -3,8 +3,8 @@
 	.entry-content {
 
 		.alignfull {
-			margin-left: calc(-100vw / 2 + 100% / 2);
-			margin-right: calc(-100vw / 2 + 100% / 2);
+			margin-left: calc(-50vw  + 50% );
+			margin-right: calc(-50vw  + 50% );
 			max-width: 100vw;
 		}
 
@@ -15,6 +15,12 @@
 		}
 
 	}
+}
+
+// Fullwidth image overflows out of container and opens up a scroll bar. overflow hidden removes this scrollbar.
+// https://github.com/WordPress/gutenberg/issues/8289#issuecomment-414721567
+html {
+	overflow-x: hidden;
 }
 
 // Embed block adding extra spacing.
